--- a/src/h3-examples/h3-examples.cabal
+++ b/src/h3-examples/h3-examples.cabal
@@ -1,17 +1,17 @@
-name:          h3-core
+name:          h3-examples
 version:       0.0.1
 category:      Visualisation
 license:       MIT
 author:        Jann Mueller
-maintainer:    Jann Mueler (j.mueller.11@alumni.ucl.ac.uk)
+maintainer:    Jann Mueller (j.mueller.11@alumni.ucl.ac.uk)
 stability:     provisional
 homepage:      https://github.com/j-mueller/h3
 bug-reports:   https://github.com/j-mueller/h3/issues
 copyright:     Copyright (C) 2018 Jann Mueller
 build-type:    Simple
 cabal-version: >= 1.10
-synopsis:      Core library for h3
-description:   This package provides the core types for h3
+synopsis:      h3 examples
+description:   h3 examples
 
 source-repository head
   type: git
@@ -21,17 +21,11 @@ library
   default-language: Haskell2010
   ghc-options: -Wall
   exposed-modules:
-    Data.H3,
-    Data.H3.Extent,
-    Data.H3.Scalable,
-    Data.H3.Scales,
-    Data.H3.Visuals,
-    Data.H3.Utils
+    Data.H3.Examples.BarChart
+  build-depends: h3-core, h3-colour, h3-svg
   build-depends:
     base,
-    containers,
-    format-numbers,
-    profunctors,
-    semigroups,
+    lens,
     semigroupoids,
+    svg-builder,
     text
